--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "test_file_reader",
+  "name": "csv_to_json",
   "version": "1.0.0",
-  "description": "",
+  "description": "a CSV to JSON converter",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Bharat-Software-Systems/csv_to_json.git"
+  },
+  "author": "Bharat-Software-Systems",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Bharat-Software-Systems/csv_to_json/issues"
+  },
+  "homepage": "https://github.com/Bharat-Software-Systems/csv_to_json#readme"
 }
